--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>$RELEASE_NO</version>
   <packaging>jar</packaging>
 
   <name>Maven Quick Start Archetype</name>
